playing with handsontable

--- a/todoapp1/admin1/templates/admin/base_site.html
+++ b/todoapp1/admin1/templates/admin/base_site.html
@@ -12,6 +12,8 @@
 
 <style type="text/css">
 
+.container { padding: 0 5px 0 5px; width: auto;}
+
 /* remove the annoyingly big "Fields in bold are required." in every django page. */
 form.form-horizontal>div.alert.alert-warning {
 	display: none;
@@ -30,13 +32,6 @@ body {
 .select-inline {
 	width: auto;
 	display: inline;
-}
-
-/* in /admin/backend1/venueadmin/ detail, the map should have this dimensions */
-.geocomplete-map {
-	margin: 10px 0 10px 130px;
-	width: 696px;
-	height: 300px;
 }
 
 /* styles for the the searchable combobox/autocomplete widget */
