--- a/todoapp1/admin1/templates/admin/index_shortcuts.html
+++ b/todoapp1/admin1/templates/admin/index_shortcuts.html
@@ -2,6 +2,6 @@
 <ul class="nav nav-pills nav-stacked">
     <li><a href="{% url 'admin:backend1_userprofile_changelist' %}">Users</a></li>
     <li><a href="{% url 'handsontable_users' %}">User's Grid</a></li>
-    <li><a href="{% url 'handsontable_demo' %}">Demo Grid</a></li>
+    <li><a href="{% url 'admin:backend1_handsontabledemo_changelist' %}">Demo Grid</a></li>
     <li><a href="{% url 'admin:backend1_todolist_changelist' %}">TO-DO lists</a></li>
 </ul>
